changed the deprecated code